adding deps, configs, etc.

--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "repository": "https://github.com/noahweingand/hax",
   "author": "Noah Weingand",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "module": "dist/use-spotify-song.esm.js",
   "scripts": {
-    "start": "tsdx watch",
-    "dev": "node dist/index.js",
-    "build": "tsdx build",
-    "lint": "tsdx lint src",
-    "prepare": "tsdx build"
+    "watch": "tsc --watch",
+    "dev": "node dist/src/index.js",
+    "build": "tsc",
+    "start": "yarn build && yarn dev",
+    "deploy-cmds": "yarn build && node dist/src/services/deploy-commands.js"
   },
   "dependencies": {
+    "@discordjs/builders": "^0.5.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.1.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@types/node": "^16.7.1",
     "@types/node-fetch": "^2.5.12",
     "autoprefixer": "^10.3.1",
     "discord-api-types": "^0.22.0",
@@ -27,7 +29,6 @@
     "husky": "^7.0.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   },
