--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,34 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
+    "target": "es6",
     "moduleResolution": "node",
+    "module": "commonjs",
+    "outDir": "dist",
+    "declaration": true,
+    "noLib": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "pretty": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": true,
+    "listFiles": false,
+    "noEmitHelpers": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "strict": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
+    "noImplicitUseStrict": false,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
     "noUnusedLocals": true,
-    "rootDir": "./src"
+    "noUnusedParameters": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "types"],
-  "exclude": ["node_modules"]
+  "include": ["./src/**/*.tsx", "./src/**/*.ts"],
+  "exclude": ["node_modules"],
+  "compileOnSave": false
 }
