--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "dist/use-spotify-song.esm.js",
   "scripts": {
     "watch": "tsc --watch",
-    "dev": "node dist/src/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "start": "yarn build && yarn dev",
     "deploy-cmds": "yarn build && node dist/src/lib/deploy-commands.js"
@@ -29,6 +29,7 @@
     "husky": "^7.0.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   },
