--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "watch": "tsc --watch",
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
-    "start": "yarn build && yarn dev",
+    "dev-watch": "yarn build && yarn dev",
+    "start": "yarn build && node dist/src/index.js",
     "deploy-cmds": "yarn build && node dist/src/lib/deploy-commands.js"
   },
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.1.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.7.1",
@@ -30,7 +32,6 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "ts-node-dev": "^1.1.8",
-    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   },
   "engines": {
