--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.1.0",
-    "node-fetch": "^2.6.1",
-    "tslib": "^2.3.1"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/node": "^16.7.1",
@@ -33,7 +32,8 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "tslib": "^2.3.1"
   },
   "engines": {
     "node": ">=16"
